fix/frontend54 * custom-scrollbar

--- a/frontend/src/assets/css/scaffolding.scss
+++ b/frontend/src/assets/css/scaffolding.scss
@@ -1,3 +1,5 @@
+@import 'scrollbar.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -17,8 +19,19 @@
   src: url('../font/Gilroy-Medium.ttf');
 }
 
-$brand-green-color: #06c149;
+$gray-400-primary-background: #181a20;
+$gray-300-header-menu-background: #1f222a;
+$gray-200-input-background: #363c3a;
+$green-300-primary-background: #213428;
+$green-200-header-menu-background: #344f3e;
 $green-100-header-menu-background: #ebefe8;
+$primary-text-color: #181a20;
+$text-gray-color: #6a726d;
+$white-text-color: #ffffff;
+$brand-green-color: #06c149;
+$brand-yellow-color: #f6c648;
+$support-info-color: #03d8ff;
+$supprot-error-color: #f76519;
 
 :root {
   --gray-400-primary-background: #181a20;
@@ -38,7 +51,8 @@ $green-100-header-menu-background: #ebefe8;
 
 // custom scrollbar
 html {
-  scrollbar-color: $brand-green-color $green-100-header-menu-background;
+  @include scrollbar-color($brand-green-color, $green-100-header-menu-background);
+
   scrollbar-width: thin;
 }
 
@@ -46,14 +60,17 @@ html {
   width: 8px;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: $brand-green-color;
-  box-shadow: inset 0 0 6px rgb(0 0 0 / 50%);
+::-webkit-scrollbar-track {
+  @include scrollbar-shadow($text-gray-color);
 }
 
-::-webkit-scrollbar-track {
-  background-color: $green-100-header-menu-background;
-  box-shadow: inset 0 0 6px rgb(0 0 0 / 40%);
+::-webkit-scrollbar-thumb {
+  @include scrollbar-shadow($text-gray-color);
+  @include scrollbar-background($brand-green-color);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  @include scrollbar-background($text-gray-color);
 }
 
 // custom scrollbar end
